# symulacja

./: Antylopa.cpp  Antylopa.h  BarszczSosnowskiego.cpp  BarszczSosnowskiego.h  CMakeLists.txt  Czlowiek.cpp  Czlowiek.h  Dziennik.cpp  Dziennik.h  Gra.cpp  Gra.h  Guarana.cpp  Guarana.h  Lis.cpp  Lis.h  MenedzerPlikow.cpp  MenedzerPlikow.h  Mlecz.cpp  Mlecz.h  Organizm.cpp  Organizm.h  Owca.cpp  Owca.h  Punkt.h  Roslina.cpp  Roslina.h  Swiat.cpp  Swiat.h  Trawa.cpp  Trawa.h  Wektor2d.h  WilczeJagody.cpp  WilczeJagody.h  Wilk.cpp  Wilk.h  Zolw.cpp  Zolw.h  Zwierze.cpp  Zwierze.h  config.h  (+4 more)
pomocnicze/: MenedzerPlikow.cpp  MenedzerPlikow.h
rosliny/: BarszczSosnowskiego.cpp  BarszczSosnowskiego.h  Guarana.h  Mlecz.h  Trawa.h  WilczeJagody.h
stany_gry/: _FORMAT.txt  antylopy.state  barszcz.state  cos.state  czerwony.state  laka.state  laka2.state  lis.state  listest.state  spec.state  wiek.state  zapis.state
zwierzeta/: Antylopa.h  Lis.h  Owca.h  Wilk.cpp  Wilk.h  Zolw.cpp  Zolw.h
