cmake_minimum_required(VERSION 3.20)
project(PO_CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(PO_CPP main.cpp Swiat.cpp Swiat.h Organizm.cpp Organizm.h Wektor2d.h symulacja.h Zwierze.cpp Zwierze.h Roslina.cpp Roslina.h config.h Wilk.cpp Wilk.h Trawa.cpp Trawa.h Mlecz.cpp Mlecz.h Owca.cpp Owca.h Guarana.cpp Guarana.h WilczeJagody.cpp WilczeJagody.h BarszczSosnowskiego.cpp BarszczSosnowskiego.h Zolw.cpp Zolw.h Lis.cpp Lis.h Antylopa.cpp Antylopa.h Gra.cpp Gra.h Czlowiek.cpp Czlowiek.h MenedzerPlikow.cpp MenedzerPlikow.h)
