cmake_minimum_required(VERSION 3.20)
project(PO_CPP)

set(CMAKE_CXX_STANDARD 20)

add_executable(PO_CPP main.cpp Swiat.cpp Swiat.h Organizm.cpp Organizm.h Wektor2d.h symulacja.h Zwierze.cpp Zwierze.h Roslina.cpp Roslina.h config.h zwierzeta/Wilk.cpp zwierzeta/Wilk.h Trawa.cpp Trawa.h Mlecz.cpp Mlecz.h zwierzeta/Owca.cpp zwierzeta/Owca.h Guarana.cpp Guarana.h WilczeJagody.cpp WilczeJagody.h BarszczSosnowskiego.cpp BarszczSosnowskiego.h zwierzeta/Zolw.cpp zwierzeta/Zolw.h zwierzeta/Lis.cpp zwierzeta/Lis.h zwierzeta/Antylopa.cpp zwierzeta/Antylopa.h Gra.cpp Gra.h Czlowiek.cpp Czlowiek.h MenedzerPlikow.cpp MenedzerPlikow.h Dziennik.cpp Dziennik.h)
